fix file name overflow issue in file details

--- a/public/styles/welcome.css
+++ b/public/styles/welcome.css
@@ -2,12 +2,16 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding-bottom: 30px;
+
+    overflow: hidden;
 }
 
 .user-name{
     font-size: 2rem;
     font-weight: 600;
     padding-bottom: 8px;
+
+    overflow-wrap: anywhere;
 }
 
 .welcome-text {
